--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "heroicons": "^2.1.5",
     "mongoose": "^8.7.0",
     "next": "14.2.13",
     "react": "^18",
