--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "heroicons": "^2.1.5",
     "mongoose": "^8.7.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
